<resources>
    <string name="app_name">Examen</string>
    <string name="title_registro">Registro</string>
    <string name="text_curp">Ingrese su CURP</string>
    <string name="text_nombre">Ingrese su nombre</string>
    <string name="text_apellido">Ingrese sus apellidos</string>
    <string name="text_domicilio">Ingrese su domicilio</string>
    <string name="text_ingreso">Ingrese su ingreso familiar</string>
    <string name="text_credito">Tipo de credito:</string>
    <string name="opt_medio">Medio</string>
    <string name="opt_parcial">Parcial</string>
    <string name="opt_total">Total</string>
    <string name="btn_validar">Validar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_horario">Definir horario</string>
    <string name="btn_ver_cita">Ver cita</string>
    <string name="title_cita">Definir cita</string>
</resources>