<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registro"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_curp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_curp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <EditText
        android:id="@+id/id_nombre"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_nombre"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_curp" />

    <EditText
        android:id="@+id/id_apellido"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_apellido"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_nombre" />

    <EditText
        android:id="@+id/id_domicilio"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_domicilio"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_apellido" />

    <EditText
        android:id="@+id/id_ingreso"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_ingreso"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_domicilio" />

    <TextView
        android:id="@+id/txt_credito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_credito"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_ingreso" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txt_credito"
        app:layout_constraintTop_toBottomOf="@+id/txt_credito">

        <RadioButton
            android:id="@+id/rb_medio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opt_medio" />

        <RadioButton
            android:id="@+id/rb_parcial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opt_parcial" />

        <RadioButton
            android:id="@+id/rb_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opt_total" />
    </RadioGroup>

    <Button
        android:id="@+id/button_validar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_validar"
        android:onClick="validar"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar"
        app:layout_constraintStart_toEndOf="@+id/button_validar"
        app:layout_constraintTop_toTopOf="@+id/button_validar" />
</androidx.constraintlayout.widget.ConstraintLayout>