<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitaActivity">

    <TextView
        android:id="@+id/txt_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cita"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cita"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_horario"
        android:textAllCaps="true"
        android:onClick="setHourAlarm"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cita" />

    <Button
        android:id="@+id/button_ver_cita"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="programar_alarma"
        android:text="@string/btn_ver_cita"
        android:textAllCaps="true"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cita" />
</androidx.constraintlayout.widget.ConstraintLayout>